# airbnb-market-insights-seattle

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
dashboard/: Airbnb Dashboard.twb
src/: __init__.py
src/analysis/: __init__.py  market_analysis.py
src/data/: __init__.py  loader.py  transformer.py
src/utils/: __init__.py  logger.py
src/visualization/: __init__.py  charts.py
tests/: conftest.py  test_market_analysis.py  test_transformer.py
